fixed broken add button and z-index for the footer

--- a/public/style.css
+++ b/public/style.css
@@ -129,6 +129,8 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    z-index: 1;
+    background: white;
 }
 
 form {
